cache buster demo

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "signalxcc",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -11,6 +11,9 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
+    "clean": "rm -rf build",
+    "prebuild": "npm run generate-build-version",
+    "generate-build-version": "node generate-build-version",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
