--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
+    "react-clear-cache": "^1.3.2",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "^3.4.3"
   },
   "scripts": {
-    "clean": "rm -rf build",
-    "prebuild": "npm run generate-build-version",
-    "generate-build-version": "node generate-build-version",
+    "prebuild": "npm run generate-build-meta",
+    "generate-build-meta": "node ./node_modules/react-clear-cache/bin/cli.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
